cmake_minimum_required(VERSION 2.8)
PROJECT (STOCK)
SET(CMAKE_C_COMPILER "g++")
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/core ${CMAKE_SOURCE_DIR}/stockmodule ${CMAKE_SOURCE_DIR}/thirdlib/log4cpp/include/ 
${CMAKE_SOURCE_DIR}/thirdlib/rampool/include ${CMAKE_SOURCE_DIR}/thirdlib/event/include ${CMAKE_SOURCE_DIR}/tcprelaymodule)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdlib/log4cpp/lib ${CMAKE_SOURCE_DIR}/thirdlib/event/lib 
${CMAKE_SOURCE_DIR}/thirdlib/rampool/lib /usr/lib64/mysql)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/core)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/stockmodule)
ADD_SUBDIRECTORY(${CMAKE_SOURCE_DIR}/tcprelaymodule)
SET (SRC_LIST main.cpp)
SET (SRC_CHECK stockcheck.cpp)
SET (SRC_RELAY tcprelay.cpp)
ADD_EXECUTABLE(stockmoney ${SRC_LIST})
ADD_EXECUTABLE(stockcheck ${SRC_CHECK})
ADD_EXECUTABLE(tcprelay ${SRC_RELAY})
#ADD_DEPENDENCIES(stockmoney stockevt)
TARGET_LINK_LIBRARIES (stockmoney stockevt core log4cpp event  mysqlclient pthread)
TARGET_LINK_LIBRARIES (stockcheck stockevt core log4cpp event  mysqlclient pthread)
TARGET_LINK_LIBRARIES (tcprelay tcprelaymodule core log4cpp event pthread)
