AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/core SRC_LIST)
SET(CMAKE_C_COMPILER "g++")
SET(CMAKE_CXX_COMPILER "g++")
#SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/stocksrc)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/thirdlib/log4cpp/include ${CMAKE_SOURCE_DIR}/thirdlib/event/include ${CMAKE_SOURCE_DIR}/stockmodule)
MESSAGE(STATUS "This is lixaing" ${SRC_LIST})
ADD_LIBRARY(core STATIC ${SRC_LIST})