AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/stockmodule SRC_LIST)
SET(CMAKE_C_COMPILER "g++")
SET(CMAKE_CXX_COMPILER "g++")
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/log4cpp/include ${CMAKE_SOURCE_DIR}/event/include ${CMAKE_SOURCE_DIR}/core)
MESSAGE(STATUS "This is stockmodule" ${SRC_LIST})
ADD_LIBRARY(stockevt STATIC ${SRC_LIST})